--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,9 +1,8 @@
-# .github/workflows/ci.yml
 name: CI/CD for Python App
 
 on:
   push:
-    branches: [master]
+    branches: [master]  # Змінено на main, оскільки ти використовуєш гілку main
   pull_request:
 
 jobs:
@@ -12,19 +11,18 @@ jobs:
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
-
       - name: Set up Python
         uses: actions/setup-python@v5
         with:
-          python-version: '3.10'
-
+          python-version: '3.12'  # Змінено на 3.12 для узгодження з локальним середовищем
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
           pip install -r requirements.txt
-
       - name: Run tests
-        run: pytest
+        run: |
+          export PYTHONPATH=$PYTHONPATH:.
+          pytest
 
   docker-build:
     needs: build-and-test
@@ -32,10 +30,8 @@ jobs:
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
-
       - name: Build Docker image
         run: docker build -t my-python-app .
-
       - name: Simulate deployment
         run: echo "Deployment to staging server successful (simulated)"
 
@@ -49,9 +45,10 @@ jobs:
         with:
           server_address: smtp.gmail.com
           server_port: 465
+          secure: true
           username: ${{ secrets.MAIL_USERNAME }}
           password: ${{ secrets.MAIL_PASSWORD }}
           subject: CI/CD Pipeline Success
           to: farebl.04@gmail.com
-          from: GitHub Actions <your-email@example.com>
+          from: GitHub Actions <farebl.04@gmail.com>  # Оновлено
           body: The CI/CD pipeline for my-python-project has completed successfully!
